# xml-parser

./: .gitignore  CITATION.cff  README.md  parser.ipynb  pyproject.toml  requirements.txt
corpus_data/: .gitignore
xml_extractor/: XMLExtractor.py  __init__.py
xml_parser/: Parser.py  XMLParser.py  __init__.py
