[tool.poetry]
name = "xml-parser"
version = "0.1.0"
description = "A tool for parsing XML-encoded texts to obtain textual metadata"
authors = ["Hamish Croser <hamish.croser@sydney.edu.au>"]
readme = "README.md"
repository = "https://github.com/Australian-Text-Analytics-Platform/xml-parser"
license = "MIT"
packages = [{include = "xml_parser"}]
exclude = ["*/.ipynb_checkpoints/*", "*log.txt"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
panel = "~=1.4"
atap-corpus-loader = "~=1.7.6"
regex = "~=2024.9.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "~=4.0.0"
ipywidgets = "~=8.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
